# sparreal-os

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: .config.toml  config.toml
.github/workflows/: ci.yml
app/helloworld/: Cargo.toml
app/helloworld/src/: main.rs
app/simple_test/: Cargo.toml  bare-test.toml  build.rs
app/simple_test/src/: lib.rs
app/simple_test/tests/: test1.rs
apps/helloworld/: Cargo.toml  build.rs
apps/helloworld/src/: main.rs
apps/simple_test/: .gitignore  Cargo.toml  bare-test.toml
crates/bare-test/: Cargo.toml  README.md  build.rs  link.ld
crates/bare-test-macros/: Cargo.toml
crates/bare-test-macros/src/: lib.rs
crates/bare-test/src/: lib.rs  test_case.rs
crates/driver-interface/: Cargo.toml
crates/driver-interface/src/: _macro.rs  err.rs  intc.rs  interrupt_controller.rs  irq.rs  lib.rs  lock.rs  register.rs  timer.rs  uart.rs
crates/driver-interface/src/io/: mod.rs
crates/driver-interface/src/timer/: mod.rs  queue.rs
crates/fdt-parser/: Cargo.toml
crates/fdt-parser/examples/: bcm2711.rs  phytium.rs  phytium2.rs
crates/fdt-parser/src/: cell.rs  define.rs  error.rs  fdt.rs  lib.rs  meta.rs  node.rs  property.rs  (+1 more)
crates/flat_device_tree/: .woodpecker.yaml  Cargo.toml  README.md
crates/flat_device_tree/dtb/: phytium-arceos.dtb  phytium.dtb
crates/flat_device_tree/examples/: basic_info.rs  phytium.rs  phytium_jal.rs  raspi4b.rs  tree_print.rs
crates/flat_device_tree/src/: error.rs  lib.rs  node.rs  parsing.rs  pretty_print.rs  standard_nodes.rs  tests.rs
crates/flat_device_tree/src/node/: cell_size.rs
crates/page-table/: Cargo.toml
crates/page-table-arm/: Cargo.toml  README.md
crates/page-table-arm/src/: lib.rs  pte.rs  pte64.rs
crates/page-table-arm/src/tests/: test.rs
crates/page-table-arm/tests/: test.rs
crates/page-table-generic/: Cargo.toml  README.md
crates/page-table-generic/src/: lib.rs
crates/page-table-interface/: Cargo.toml
crates/page-table/src/: lib.rs
crates/page-table/src/arch/aarch64/: mod.rs
crates/page-table2/: Cargo.toml
crates/page-table2/src/: lib.rs
crates/page-table2/src/arch/aarch64/: mod.rs
crates/page_table/: Cargo.toml
crates/rdrive/: Cargo.toml
crates/rdrive/rdif-base/: Cargo.toml
crates/rdrive/rdif-base/src/: io.rs  lib.rs
crates/rdrive/rdif-intc/: Cargo.toml
crates/rdrive/rdif-intc/src/: lib.rs
crates/rdrive/rdrive/: Cargo.toml  README.md
crates/rdrive/rdrive-macro-utils/: Cargo.toml
crates/rdrive/rdrive-macro-utils/src/: lib.rs
crates/rdrive/rdrive-macros/: Cargo.toml
crates/rdrive/rdrive-macros/src/: lib.rs
crates/rdrive/rdrive/src/: error.rs  id.rs  lib.rs  manager.rs
crates/rdrive/rdrive/src/device/: intc.rs  mod.rs  timer.rs
crates/rdrive/rdrive/src/probe/: fdt.rs  mod.rs
crates/rdrive/rdrive/src/register/: intc.rs  mod.rs  timer.rs
crates/sparreal-build/: Cargo.toml
crates/sparreal-kernel/: Cargo.toml
crates/sparreal-kernel/src/: __export.rs  fdt.rs  kernel.rs  lang_items.rs  lib.rs  logger.rs  prelude.rs  time.rs
crates/sparreal-kernel/src/async_std/: time.rs
crates/sparreal-kernel/src/boot/: debug.rs  mmu.rs  mod.rs
crates/sparreal-kernel/src/driver/: container.rs  id.rs  irq.rs  manager.rs  mod.rs  timer.rs  uart.rs
crates/sparreal-kernel/src/driver/device_tree/: mod.rs
crates/sparreal-kernel/src/driver_manager/: err.rs  id.rs  mod.rs
crates/sparreal-kernel/src/driver_manager/device/: descriptor.rs  irq.rs  mod.rs
crates/sparreal-kernel/src/driver_manager/device/timer/: mod.rs
crates/sparreal-kernel/src/driver_manager/driver/: err.rs  interrupt_controller.rs  mod.rs
crates/sparreal-kernel/src/executor/: mod.rs
crates/sparreal-kernel/src/globals/: mod.rs  once.rs  percpu.rs
crates/sparreal-kernel/src/io/: print.rs
crates/sparreal-kernel/src/irq/: mod.rs
crates/sparreal-kernel/src/mem/: addr.rs  addr2.rs  cache.rs  dma.rs  mod.rs  once.rs  region.rs
crates/sparreal-kernel/src/mem/mmu/: boot.rs  mod.rs  paging.rs  table.rs
crates/sparreal-kernel/src/module/: mod.rs
crates/sparreal-kernel/src/platform/: fdt.rs  mod.rs
crates/sparreal-kernel/src/platform_if/: mod.rs
crates/sparreal-kernel/src/stdout/: mod.rs
crates/sparreal-kernel/src/sync/: mod.rs  rwlock.rs  spin.rs
crates/sparreal-kernel/src/task/: mod.rs  queue.rs  schedule.rs  tcb.rs
crates/sparreal-kernel/src/time/: mod.rs  queue.rs  timer.rs
crates/sparreal-kernel/src/util/: boot.rs
crates/sparreal-kernel/tests/: test.rs
crates/sparreal-macros/: Cargo.toml
crates/sparreal-macros/src/: api_trait.rs  lib.rs
crates/sparreal-macros/src/arch/: aarch64.rs
crates/sparreal-macros/tests/: test.rs
crates/sparreal-rt/: Cargo.toml  Link.ld  build.rs  link.ld
crates/sparreal-rt/src/: config.rs  consts.rs  early_debug.rs  error.rs  kernel.rs  lang_items.rs  lib.rs  logger.rs  mem.rs  prelude.rs  time.rs
crates/sparreal-rt/src/arch/aarch64/: boot.S  boot.rs  boot.s  cache.S  cache.rs  context.rs  cpu.rs  debug.rs  dma.rs  gic.rs  gic_v2.rs  gic_v3.rs  mmu.rs  mod.rs  paging.rs  power.rs  psci.rs  timer.rs  trap.S  trap.rs  vectors.S  vectors.s
crates/sparreal-rt/src/arch/aarch64/debug/: mod.rs
crates/sparreal-rt/src/arch/aarch64/driver/: mod.rs
crates/sparreal-rt/src/arch/aarch64/gic/: gic_v2.rs  gic_v3.rs  mod.rs
crates/sparreal-rt/src/debug/: aux_mini.rs  mod.rs  pl011.rs
crates/sparreal-rt/src/device/: virtio.rs
crates/sparreal-rt/src/driver/: mod.rs
crates/sparreal-rt/src/driver/uart/: pl011.rs
crates/sparreal-rt/src/drivers/: gic.rs  mod.rs
crates/sparreal-rt/src/drivers/timer/: armv8.rs  mod.rs
crates/sparreal-rt/src/drivers/uart/: mod.rs  pl011.rs
crates/sparreal-rt/src/hypercall/: mod.rs
crates/sparreal-rt/src/io/: print.rs
crates/sparreal-rt/src/mem/: addr.rs  mmu.rs  mod.rs  space.rs
crates/sparreal-rt/src/memory/: mod.rs
crates/sparreal-rt/src/percpu/: mod.rs
crates/sparreal-std/: Cargo.toml
crates/xtask/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: compile.rs  config.rs  main.rs  project.rs  qemu.rs  shell.rs  uboot.rs  up_version.rs
(+21 files in other folders)
