[workspace]
members = ["apps/*", "crates/*", "xtask"]
resolver = "3"

[workspace.package]
version = "0.9.0"
edition = "2024"

[workspace.dependencies]
sparreal-macros = { path = "crates/sparreal-macros", version = "0.9" }
sparreal-kernel = { path = "crates/sparreal-kernel", version = "0.9" }
sparreal-rt = { path = "crates/sparreal-rt", version = "0.9" }
bare-test = { path = "crates/bare-test" }
bare-test-macros = { path = "crates/bare-test-macros" }
log = "0.4"
