[package]
name = "bare-test-macros"
version = "0.2.0"
edition.workspace = true
license = "MIT"
description = "macros for bare-test"
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/qclic/sparreal-os/tree/main/crates/bare-test-macros"
categories = ["embedded", "no-std"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }


[features]
