[package]
name = "bare-test"
version = "0.3.1"
authors = ["Zhourui <zrufo747@outlook.com>"]
edition.workspace = true
repository = "https://github.com/qclic/sparreal-os/tree/main/crates/bare-test"
license = "MPL-2.0"
description = "A test framework for bare metal."
keywords = ["test", "case", "testing", "testcase", "unittest"]
categories = ["development-tools", "development-tools::testing"]

[features]
default = ["rt"]
# 使用 `sparreal-rt` 作为运行时
rt = ["dep:sparreal-rt"]

[dependencies]
sparreal-rt = { version = "0.6", path = "../sparreal-rt", optional = true }
sparreal-kernel = { version = "0.6", path = "../sparreal-kernel" }
sparreal-macros = { version = "0.6", path = "../sparreal-macros" }
bare-test-macros = { version = "0.2", path = "../bare-test-macros" }
log = { version = "0.4" }
