[dependencies.bare-test-macros]
path = "../bare-test-macros"
version = "0.2"

[dependencies.log]
version = "0.4"

[dependencies.sparreal-kernel]
path = "../sparreal-kernel"
version = "0.9"

[dependencies.sparreal-macros]
path = "../sparreal-macros"
version = "0.9"

[dependencies.sparreal-rt]
optional = true
path = "../sparreal-rt"
version = "0.9"

[features]
default = ["rt"]
rt = ["sparreal-rt"]

[package]
authors = ["Zhourui <zrufo747@outlook.com>"]
categories = ["development-tools", "development-tools::testing"]
description = "A test framework for bare metal."
keywords = ["test", "case", "testing", "testcase", "unittest"]
license = "MPL-2.0"
name = "bare-test"
repository = "https://github.com/qclic/sparreal-os/tree/main/crates/bare-test"
version = "0.4.0"

[package.edition]
workspace = true
