[package]
name = "driver-interface"
version = "0.4.4"
authors = ["Zhourui <zrufo747@outlook.com>"]
edition.workspace = true
repository = "https://github.com/qclic/sparreal-os"
license = "MPL-2.0"
description = "Sparreal OS kernel"
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4"
fdt-parser = "0.4"
