[package]
name = "flat_device_tree"
version = "3.1.1"
authors = ["Wesley Norris <repnop@outlook.com>", "Marc Brinkmann <git@marcbrinkmann.de>", "Rust flat_device_tree developers"]
edition = "2021"
repository = "https://codeberg.org/weathered-steel/flat_device_tree"
documentation = "https://docs.rs/flat_device_tree"
license = "MPL-2.0"
description = "A pure-Rust `#![no_std]` crate for parsing Flattened Devicetrees"
keywords = ["devicetree", "fdt", "dt", "dtb"]
categories = ["embedded", "no-std"]
readme = "README.md"

[features]
pretty-printing = []

[dependencies]
