[package]
name = "page-table-generic"
description = "A library for general page table operations"
version = "0.0.1"
edition = "2021"
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/qclic/sparreal-os/tree/main/crates/page-table-generic"
documentation = "https://docs.rs/page-table-generic"
license = "MIT"
keywords = ["pagetable", "mmu"]
categories = ["no-std"]

[dependencies]
log = "0.4"
bitflags = "2.6"
