[package]
name = "sparreal-kernel"
version.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
edition.workspace = true
repository = "https://github.com/ZR233/sparreal-os"
license = "MPL-2.0"
description = "Sparreal OS kernel"
keywords = ["os"]
categories = ["embedded", "no-std"]

[features]
mmu = []


[dependencies]
log = "0.4"
buddy_system_allocator = "0.11"
sparreal-macros = { version = "0.6", path = "../sparreal-macros" }
driver-interface = { version = "0.2", path = "../driver-interface" }
memory_addr = "0.3"
page-table-generic = { version = "0.5" }
fdt-parser = "0.4"
lock_api = "0.4"
pasts = { version = "0.14", default-features = false }
ansi_rgb = "0.2"
rgb = "0.8.47"
spin = "0.9"
anyhow = { version = "1.0", default-features = false }
byte-unit = { version = "5.1", features = ["byte"], default-features = false }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
thiserror = { version = "2", default-features = false }
dma-api = "0.2"