[dependencies]
ansi_rgb = "0.2"
buddy_system_allocator = "0.11"
dma-api = "0.2"
fdt-parser = "0.4"
lock_api = "0.4"
log = "0.4"
memory_addr = "0.3"
rgb = "0.8.47"
spin = "0.9"
page-table-generic = "0.5"
rdrive = "0.1"

[dependencies.anyhow]
default-features = false
version = "1.0"

[dependencies.byte-unit]
default-features = false
features = ["byte"]
version = "5.1"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.5"

[dependencies.pasts]
default-features = false
version = "0.14"


[dependencies.sparreal-macros]
path = "../sparreal-macros"
version = "0.8"

[dependencies.thiserror]
default-features = false
version = "2"

[features]
mmu = []

[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Sparreal OS kernel"
keywords = ["os"]
license = "MPL-2.0"
name = "sparreal-kernel"
repository = "https://github.com/ZR233/sparreal-os"

[package.edition]
workspace = true

[package.version]
workspace = true
