[package]
name = "sparreal-macros"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "macros for sparreal"
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/qclic/sparreal-os/tree/main/crates/sparreal-macros"
categories = ["embedded", "no-std"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
abi-singleton = "0.3"
[features]
