[dependencies]
bitflags = "2.6"
buddy_system_allocator = "0.11"
dma-api = "0.2"
fdt-parser = "0.4"
log = "0.4"

[dependencies.futures]
default-features = false
features = ["alloc"]
version = "0.3"

[dependencies.page-table-generic]
version = "0.5"

[dependencies.sparreal-kernel]
features = ["mmu"]
path = "../sparreal-kernel"
version = "0.8"

[dependencies.sparreal-macros]
path = "../sparreal-macros"
version = "0.8"

[features]
default = ["early-print"]
early-print = []

[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Sparreal OS Runtime"
keywords = ["os"]
license = "MPL-2.0"
name = "sparreal-rt"
repository = "https://github.com/ZR233/sparreal-os"

[package.edition]
workspace = true

[package.version]
workspace = true

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"
arm-pl011-rs = "0.2"
arm_pl031 = "0.2.1"
tock-registers = "0.9"

[target.'cfg(target_arch = "aarch64")'.dependencies.arm-gic-driver]
version = "0.5"

[target.'cfg(target_arch = "aarch64")'.dependencies.page-table-arm]
path = "../page-table-arm"
version = "0.1"
