[package]
name = "sparreal-rt"
version.workspace = true
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["embedded", "no-std"]
description = "Sparreal OS kernel"
keywords = ["os"]
license = "MPL-2.0"
repository = "https://github.com/ZR233/sparreal-os"

[features]
default = ["early-print"]
early-print = []
vm = []

[dependencies]
buddy_system_allocator = "0.11"
log = "0.4"
page-table-generic = "0.5"
ansi_rgb = "0.2"
rgb = "0.8"
fdt-parser = "0.4"
spin = "0.9"
memory_addr = "0.3"
numeric-enum-macro = "0.2"
arrayvec = { version = "0.7", default-features = false }
sparreal-macros = { workspace = true }
sparreal-kernel = { workspace = true, features = ["mmu"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"
page-table-arm = "0.1"
smccc = "0.1"
arm-gic-driver = "0.7"
