[package]
name = "rdif-intc"
version = "0.1.1"
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/qclic/sparreal-os"
license = "MIT"
description = "Driver Interface of interrupt controller."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
rdif-base = { path = "../rdif-base", version = "0.1" }
