[package]
name = "rdrive-macro-utils"
version = "0.1.0"
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/qclic/sparreal-os/crates/rdrive/rdrive"
license = "MIT"
description = "A dyn driver manager."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
abi-singleton = "0.3"
darling = "0.20"