[package]
name = "rdrive"
version = "0.1.0"
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/qclic/sparreal-os/crates/rdrive/rdrive"
license = "MIT"
description = "A dyn driver manager."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
driver-interface = { version = "0.5" }
spin = "0.9"
fdt-parser = "0.4"
thiserror = { version = "2", default-features = false }
log = "0.4"
