[package]
name = "rdrive"
version = "0.1.2"
edition.workspace = true
authors = ["周睿 <zrufo747@outlook.com>"]
repository = "https://github.com/qclic/sparreal-os/crates/rdrive/rdrive"
license = "MIT"
description = "A dyn driver manager."
keywords = ["os", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
spin = "0.9"
fdt-parser = "0.4"
thiserror = { version = "2", default-features = false }
log = "0.4"
rdif-base = "0.1"
rdif-intc = "0.1"
rdif-timer = "0.1"
